# naay

./: .coverage  .gitignore  .pre-commit-config.yaml  404.html  LICENSE  README.md  coverage.xml  index.html  justfile  mkdocs.yml  objects.inv  pyproject.toml  requirements.txt
.github/: dependabot.yml
.github/workflows/: ci.yml  docs.yml  release.yml  tests.yml
api/: index.html
docs/: api.md  index.md  installation.md  usage.md
examples/: _synthetic_bench_tmp.py  demo.py  stress_test0.yaml  stress_test1.yaml  synthetic_dense_bench.py
installation/: index.html
naay-core/: Cargo.toml
naay-core/src/: lib.rs
naay-py/: Cargo.toml
naay-py/src/: lib.rs
search/: search_index.json
src/_naay_native/: Cargo.toml
src/_naay_pure/: __init__.py  parser.py
src/naay/: __init__.py
tests/: test_empty_collections.py  test_examples.py  test_parity.py  test_pure_parser.py
usage/: index.html
yamlstr-core/: Cargo.toml
yamlstr-core/src/: lib.rs
