[project]
name = "naay"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "rbroderi", email = "richard.broderick@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[project.optional-dependencies]
dev = [
    "maturin>=1.10.2",
    "ruamel.yaml>=0.18",
    "pyyaml>=6",
    "rust-just>=1.43.1",
    "types-pyyaml>=6.0.12.20250915",
    "mypy>=1.19.0",
    "pytest>=8.3",
]

[build-system]
requires = ["maturin>=1.10,<2"]
build-backend = "maturin"

[tool.maturin]
manifest-path = "naay-py/Cargo.toml"
python-packages = ["naay", "_naay_pure"]
module-name = "_naay_native"
python-source = "src"
