[package]
name = "naay-core"
version = "0.2.0"
edition = "2021"
description = "Tailcall-driven YAML subset parser/dumper powering the naay Python binding"
license = "LGPL-2.1-or-later"
repository = "https://github.com/rbroderi/naay"
homepage = "https://github.com/rbroderi/naay"
documentation = "https://rbroderi.github.io/naay"

[dependencies]
thiserror = "1"
tailcall = "1.0"
