[package]
name = "naay-py"
version = "0.2.0"
edition = "2021"
description = "Rust native extension exposed via PyO3 for the naay YAML subset"
license = "LGPL-2.1-or-later"
repository = "https://github.com/rbroderi/naay"
homepage = "https://github.com/rbroderi/naay"
documentation = "https://rbroderi.github.io/naay"

[lib]
name = "_naay_native"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.22", features = ["extension-module"] }
naay-core = { path = "../naay-core" }

